--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
       </div>
       <form action="#">
         <div class="first_name">
-          <img src="./images/icon-error.svg" alt="error-icon" id="error-img">
+          <img src="./images/icon-error.svg" alt="error-icon" id="alert-img">
           <input type="text" id="f-name" name="First name" placeholder="First name" required>
           <span class="error-msg">First name cannot be empty!</span>
           <span class="error-msg2">Please enter a valid first name!</span>
         </div>
         <div class="last_name">
-          <img src="./images/icon-error.svg" alt="error-icon" id="error-img">
+          <img src="./images/icon-error.svg" alt="error-icon" id="alert-img">
           <input type="text" id="l-name" name="Last name" placeholder="Last name" required>
           <span class="error-msg">Last name cannot be empty!</span>
           <span class="error-msg2">Please enter a valid last name!</span>
         </div>
         <div class="email">
-          <img src="./images/icon-error.svg" alt="error-icon" id="error-img">
+          <img src="./images/icon-error.svg" alt="error-icon" id="alert-img">
           <input type="email" id="email" placeholder="Email" required>
           <span class="error-msg" name="Email">Email cannot be empty!</span>
           <span class="error-msg2">Looks like this is not an email</span>
         </div>
         <div class="password-input">
-          <img src="./images/icon-error.svg" alt="error-icon" id="error-img">
+          <img src="./images/icon-error.svg" alt="error-icon" id="alert-img">
           <input type="password" id="password" placeholder="Password" required>
           <span class="error-msg">Password cannot be empty!</span>
           <span class="error-msg2">Password should be more than 8 characters!</span>
